--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "mocha"
   },
   "peerDependencies": {
-    "react": "^15.1.0 || ^16.0.0"
+    "react": "^15.1.0 || ^16.0.0",
+    "react-dom": "^15.1.0 || ^16.0.0"
   },
   "dependencies": {
     "@connexta/eslint-plugin-connexta": "git://github.com/connexta/eslint-plugin-connexta.git#v0.0.2",
@@ -63,7 +64,7 @@
     "puppeteer": "1.5.0",
     "raw-loader": "0.5.1",
     "react-dev-utils": "5.0.2",
-    "react-hot-loader": "4.3.5",
+    "react-hot-loader": "4.12.6",
     "rimraf": "2.6.2",
     "script-loader": "0.7.2",
     "simple-progress-webpack-plugin": "1.1.2",
@@ -87,6 +88,7 @@
   },
   "devDependencies": {
     "@types/webpack-env": "1.13.6",
-    "react": "^15.1.0 || ^16.0.0"
+    "react": "^15.1.0 || ^16.0.0",
+    "react-dom": "^15.1.0 || ^16.0.0"
   }
 }
