--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@storybook/addon-actions": "5.2.3",
     "@storybook/addon-info": "5.2.3",
     "@storybook/addon-knobs": "5.2.3",
